// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`add course should add course to empty array 1`] = `
Array [
  Course {
    "id": "test",
    "name": "test",
    "type": "GENERAL",
  },
]
`;

exports[`add course should add course to existing courses 1`] = `
Array [
  Course {
    "id": "test",
    "name": "test",
    "type": "GENERAL",
  },
  Course {
    "id": "test-1",
    "name": "test",
    "type": "GENERAL",
  },
]
`;

exports[`load courses should load courses 1`] = `
Array [
  Course {
    "id": "test-1",
    "name": "test",
    "type": "GENERAL",
  },
  Course {
    "id": "test-2",
    "name": "test",
    "type": "GENERAL",
  },
  Course {
    "id": "test-3",
    "name": "test",
    "type": "GENERAL",
  },
]
`;

exports[`load courses should save snapshot 1`] = `
Array [
  Course {
    "id": "test-1",
    "name": "test",
    "type": "GENERAL",
  },
  Course {
    "id": "test-2",
    "name": "test",
    "type": "GENERAL",
  },
  Course {
    "id": "test-3",
    "name": "test",
    "type": "GENERAL",
  },
]
`;
